# cNES

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CREDITS  LICENCE  README.md  imgui.ini  log.txt
.github/workflows/: cmake-multi-platform.yml
data/fonts/: MaterialSymbolsRounded.md
ext/: CMakeLists.txt
include/: debug.h  profiler.h
include/cNES/: apu.h  bus.h  cpu.h  debugging.h  loader.h  mapper.h  nes.h  ppu.h  rom.h  version.h
include/cNES/scripting/: lua_api.h
include/frontend/: cimgui_markdown.h  frontend.h  frontend_config.h  frontend_internal.h  frontend_profiler.h  frontend_style.h
include/ui/: ui.h
src/: debug.c  main.c  profiler.c  ui.c  ui.h
src/cEMU/: ui.c  ui.h
src/cNES/: apu.c  bus.c  cpu copy.c  cpu.c  cpu_old.c  cpu_x86.c  debugging.c  mapper.c  nes.c  ppu.c  ppu_accelerated.c  ppu_sdlgpu.c  rom.c
src/cNES/loaders/: ines.c
src/cNES/scripting/: lua_api.c
src/frontend/: cimgui_hex.c  cimgui_markdown.c  frontend.c  frontend_config.c  frontend_debugger.c  frontend_game_screen.c  frontend_log.c  frontend_menus.c  frontend_ppu_viewer.c  frontend_profiler.c  frontend_rominfo.c  frontend_style.c
src/ui/: cimgui_markdown.c  cimgui_markdown.h  ui.c  ui_menus.c  ui_older.c  ui_style.c  ui_style.h
tests/: CMakeLists.txt  cnes_headless.c  cpu_tests.c  nestest.h  test.h
tests/AccuracyCoin/: CMakeLists.txt  test.lua
tests/blargg_ppu_tests/: imgui.ini
tests/nestest/: CMakeLists.txt  test.lua
tests/roms/: imgui.ini
